@@ -1,5 +1,10 @@
 2012-12-25  Moritz Bunkus  <moritz@bunkus.org>
 
+	* mkvmerge: enhancement: Removed several warnings from the MPEG-2
+	video parser code about open GOPs, missing references. Those were
+	too confusing for most users, even after being given additional
+	information via email and FAQs.
+
 	* mkvextract: new feature: Implemented extraction of ALAC into
 	Core Audio Format files (CAF). Implements #786.
 
